# muselab

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMPARISON_REPORT_2026-05.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_en.md  README_zh.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TODO.md  constitution.md  constitution_zh.md  docker-compose.yml  mcp.json.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: activity.py  activity_api.py  api_push.py  api_scheduler.py  api_settings.py  ask_user_question.py  auth.py  chat.py  endpoints.py  file_events.py  files.py  jsonl_cleanup.py  main.py  permission_request.py  presence.py  prompts.py  push.py  scheduler.py  sessions.py  settings.py  terminal.py  terminal_worker.py  transcript_index.py  workspaces.py
docs/: README.md  README_zh.md  add-provider.md  add-provider_zh.md  architecture.md  architecture_zh.md  backend-files.md  backend-files_zh.md  backend-security.md  backend-security_zh.md  backend-sessions.md  backend-sessions_zh.md  codex-gateway.md  codex-gateway_zh.md  comparison.md  comparison_zh.md  competitive-analysis.md  configuration.md  configuration_zh.md  data-and-backup.md  data-and-backup_zh.md  frontend.md  frontend_zh.md  glossary.md  glossary_zh.md  infrastructure.md  infrastructure_zh.md  install-linux.md  install-linux_zh.md  install-macos.md  install-macos_zh.md  install-windows.md  install-windows_zh.md  mcp-architecture.md  mcp-architecture_zh.md  mobile.md  mobile_zh.md  muses.md  muses_zh.md  personalize-claude-md.md  (+17 more)
examples/: cli-proxy-muselab.config.yaml
frontend/: app.js  index.html  styles.css  sw.js
promo/: index.html
scripts/: codex-quota-refresh.py  doctor.ps1  doctor.sh  fix-thinking-signatures.py  gen-pwa-icons.py  install-linux.sh  install-macos-statusbar.sh  install-macos.sh  install-windows.ps1  intake.ps1  intake.sh  lint.sh  quick-install.sh  setup-https.sh  uninstall-macos.sh  uninstall-windows.ps1  upgrade.ps1  upgrade.sh  versions.env
skills/: README.md
tests/: conftest.py  test_activity.py  test_ask_user_question.py  test_chat_endpoints.py  test_chat_image_upload.py  test_chat_options.py  test_chat_queue.py  test_chat_stream.py  test_claude_auth.py  test_claude_md_detection.py  test_client_pool.py  test_codex_rate_limit.py  test_cost_dashboard.py  test_docs.py  test_endpoints.py  test_file_events.py  test_files.py  test_frontend_lint.py  test_permission_request.py  test_permission_ui.py  test_prompts.py  test_provider_editor.py  test_push.py  test_regressions.py  test_scheduler.py  test_sdk_truth.py  test_search.py  test_security.py  test_session_metadata.py  (+7 more)
(+43 files in other folders)
