[project]
name = "muselab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.2.82",
    "fastapi>=0.136.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
