[project]
name = "muselab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.2.82",
    "fastapi>=0.136.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "uvicorn[standard]>=0.47.0",
    # xlsx preview — read-only, used by /api/files/xlsx. Pure-Python, no
    # native deps; safe to ship in the muselab Docker image.
    "openpyxl>=3.1.5",
    # Web Push: VAPID-signed pushes to browsers / PWAs subscribed to
    # /api/push/subscribe. Has a transitive cryptography dep but no
    # external binaries.
    "pywebpush>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    # Pinned alongside dev deps so `scripts/lint.sh` and CI both have a
    # deterministic ruff version. Without this each dev / CI run pulled
    # latest via `uv run --with ruff`, occasionally causing rule churn.
    "ruff>=0.14.0",
]

# Ruff config — keep targeted, not aggressive. Goal: catch real bugs
# (unused imports / variables, broken syntax-adjacent patterns) without
# fighting a project that values terse multi-statement-on-one-line where
# it reads naturally. Style enforcement is left to human review.
[tool.ruff]
target-version = "py312"
line-length = 100   # informational; we don't auto-format

[tool.ruff.lint]
# Default ruleset (E, F, W) — pyflakes + pycodestyle errors only.
# Explicitly NO opinionated rule families (B, I, N, UP) — they'd churn
# 6k LOC of working code for marginal gain.
select = ["E", "F", "W"]
# Project-specific tolerances:
# - E501 line-too-long: many existing lines are 100-120 chars by deliberate
#   choice (one full sentence per comment line). Not worth the churn.
ignore = ["E501"]
